--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,41 @@
+body{
+  background-color:#282c34;
+}
 .App {
   text-align: center;
+  background-color: #282c34;
+  
+  color: white;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 400px;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 5s linear;
   }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  min-height: 10vh;
+  padding:50px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  
+}
+
+.App-content {
+  
+  display: flex;
+  flex-direction: row;
+  align-items:flex-start;
+  justify-content: space-around;
+  
 }
 
 .App-link {
@@ -36,3 +50,61 @@
     transform: rotate(360deg);
   }
 }
+
+.App-indcators{
+  width:60%;
+  display:flex;
+}
+
+.kpi-list{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 500px;
+}
+.kpi{
+  width:100px;
+  height:100px;
+  padding: 10px;
+  border: 1px solid white;
+  margin: 0 20px;
+}
+.kpi-large{
+  width:250px;
+}
+.kpi h3{
+  margin:0;
+  font-size:20px;
+}
+.kpi p{
+  font-size:30px;
+  font-weight:600
+}
+.states-table{
+  width: 250px;
+  height:284px;
+  text-align: left;
+  margin: 0 20px;
+  padding: 10px;
+  border: 1px solid white;
+}
+.states-table thead{
+  font-size:20px;
+}
+
+.controls-pane{
+  width:35%;
+  margin-right:40px;
+}
+form{
+  display:flex;
+  flex-direction:column;
+  align-items:flex-end;
+  padding-right:30px;
+}
+input{
+  font-size:20px;
+  margin-left: 20px;
+  margin-bottom: 20px;
+}
+
